chore: correctly view lookups and ability to view details(replied), profile page is now working and correctly displaying tweets, ability to navigate to profiles by clicking their name
